--- a/client/src/styles/buttons.module.css
+++ b/client/src/styles/buttons.module.css
@@ -9,6 +9,8 @@
   width: 140px;
   height: 55px;
   margin-right: 20px;
+  margin-top: -10px;
+  margin-left: 20px;
 
   font-size: x-large;
   font-weight: bold;
