--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,6 +1,7 @@
 html {
-  background-color: unset;
+  background-color: #0a192f;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   /* overscroll-behavior: none; */
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   /* background-color: #0a192f; */
 }
 
