--- a/client/src/styles/buttons.module.css
+++ b/client/src/styles/buttons.module.css
@@ -10,8 +10,16 @@
   height: 55px;
   margin-right: 20px;
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 35px;
 
   font-size: x-large;
   font-weight: bold;
+}
+
+#night.mainButton.contact {
+  color: #fe29e7;
+  border-color: #fe29e7;
+  width: 200px;
+  margin-left: 0px;
+  margin-top: 30px;
 }
