--- a/client/src/styles/ToBe.module.css
+++ b/client/src/styles/ToBe.module.css
@@ -3,10 +3,12 @@
   flex-direction: column;
   align-items: start;
   margin: 30px;
+  margin-top: 200px;
   padding: 50px;
   height: 700px;
   width: 90vw;
   row-gap: 25px;
+  position: relative;
 }
 
 .headingBox {
@@ -46,4 +48,21 @@
   text-align: left;
 }
 
+.portrait {
+  position: absolute;
+  right: 250px;
+  top: 150px;
+
+  height: 400px;
+  width: 400px;
+}
+
+.pictureFrame {
+  position: absolute;
+  right: 190px;
+  top: 190px;
+  border: 10px solid #FE29E7;
+  width: 400px;
+  height: 400px;
+}
 
