--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,18 +1,32 @@
 html {
   background-color: #0a192f;
+  background-color: #baddeb;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
-* {
+*, *:before, *:after{
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
-}
-
-body {
+  font-weight: normal;
   width: 100%;
   height: 100%;
   /* overscroll-behavior: none; */
   overflow-x: hidden;
   /* background-color: #0a192f; */
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 #night {
