--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,6 +1,6 @@
 html {
   background-color: #0a192f;
-  background-color: #baddeb;
+  /* background-color: #baddeb; */
   box-sizing: border-box;
   font-size: 16px;
 }
