--- a/client/src/styles/App.module.css
+++ b/client/src/styles/App.module.css
@@ -85,19 +85,22 @@
     width: 60%;
     height: 100%;
     position: absolute;
-    opacity: 1;
-    transition: all 0.5s ease;
+    /* transition: all 5s ease; */
   }
 
   .navMenu.active {
-    display: inline;
+    padding-top: -40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 25px;
+    align-items: center;
     background-color: #112240;
     right: 0;
     opacity: 1;
-    transition: all 0.6s ease;
+    transition: all 0.5s ease;
     z-index: 1;
   }
-
 }
 
 @media all and (max-width: 1050px) {
