--- a/client/src/styles/App.module.css
+++ b/client/src/styles/App.module.css
@@ -43,9 +43,11 @@
   display: inline;
   margin-top: 20px;
   margin-left: clamp(10px, 1.5vw, 50px);
-  font-size: 13px;
+  font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  background-color: #0a192f;
+  border: none;
 }
 
 #night.link {
@@ -60,9 +62,8 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  /* margin: 30px;
-  padding: 50px; */
-  height: 700px;
+  /* margin: 30px; */
+  /* height: 700px; */
   /* width: 80%; */
 }
 
