--- a/client/src/styles/ToBe.module.css
+++ b/client/src/styles/ToBe.module.css
@@ -1,14 +1,19 @@
 .section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: start;
-  margin: 30px;
   margin-top: 200px;
-  padding: 50px;
-  height: 700px;
   width: 90%;
   row-gap: 25px;
-  position: relative;
+  /* position: relative; */
+
+  /* background-color: #8392a9; */
+}
+
+.sectionLeft {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 .headingBox {
@@ -26,43 +31,77 @@
 }
 
 .subHeading {
+  text-align: left;
   color: #ffff;
-  font-size: 30px;
+  font-size: 22px;
   font-weight: bold;
 }
 
 .bioBox {
-  width: 50%;
+  width: 100%;
   color: #8392a9;
-  font-size: 22px;
+  font-size: 20px;
   text-align: left;
 }
 
 .skillBox {
   display: flex;
   flex-direction: row;
-  column-gap: 70px;
   margin-left: 20px;
-  font-size: 22px;
+  column-gap: 50px;
+  font-size: 18px;
   color: #6AF9E2;
   text-align: left;
 }
 
+
 .portrait {
-  position: absolute;
-  right: 250px;
-  top: 150px;
+  position: relative;
+  max-width: clamp(200px, 25vw, 300px);
+  max-height: auto;
+  right: -75px;
+  top: 75px;
 
-  height: 400px;
-  width: 400px;
+  box-shadow: 20px 20px 0 -5px #0A172F, 20px 20px 0px 3px #FE29E7;
 }
 
-.pictureFrame {
-  position: absolute;
-  right: 190px;
-  top: 190px;
+/* .pictureFrame {
+  position: relative;
+  right: -90px;
+  top: 140px;
   border: 10px solid #FE29E7;
-  width: 400px;
-  height: 400px;
-}
+  height: 300px;
+  width: 300px;
+  max-width: clamp(200px, 30vw, 300px);
+  max-height: clamp(200px, 30vh, 300px)
 
+} */
+
+
+@media all and (max-width: 768px) {
+  .section {
+    flex-direction: column;
+  }
+
+
+
+  .portrait {
+    max-width: none;
+    max-height: none;
+    height: 300px;
+    width: 300px;
+    position: static;
+
+  }
+
+  .pictureBox {
+    height: 300px;
+    width: 80vw;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+}
