--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -9,7 +9,7 @@ html {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body, h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -20,8 +20,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   /* background-color: #0a192f; */
 }
 
+
 ol, ul {
-  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 img {
